# V_Project

./: .gitignore  Readme.md  main  main.rs  mane.rs  package-lock.json  package.json  vote.sol
contracts/: Donate.sol  ERC721.sol  ERCToken.sol  Voting.sol  code.sol
frontend/: page.js
test/: Donate.sol  DonateTest.js
v_project/: Cargo.toml
v_project/src/: main.rs  network.rs  server.rs
